# maestro

./: .gitignore  CMakeLists.txt  SConstruct  create_accelerator.py  find_best_mapping.py  maestro-top.cpp  vgg16.sh  vgg19.sh
cost-model/include/: option.hpp
cost-model/include/abstract-hardware-model/: AHW_noc-model.hpp
cost-model/include/base/: BASE_base-objects.hpp  BASE_constants.hpp  BASE_maestro-class.hpp
cost-model/include/cost-analysis/: CA_analysis-types.hpp  CA_cost-analysis-engine.hpp  CA_cost-analysis-results.hpp  CA_reuse-analysis.hpp
cost-model/include/dataflow-analysis/: DFA_cluster-analysis.hpp  DFA_cluster-table.hpp  DFA_cluster-unit.hpp  DFA_dimension-overlap-info-table.hpp  DFA_dimension-table.hpp  DFA_directive-table.hpp  DFA_directives.hpp  DFA_iteration-analysis.hpp  DFA_iteration-status.hpp  DFA_layer.hpp  DFA_neural-network.hpp  DFA_tensor-table.hpp  DFA_tensor.hpp
cost-model/include/dataflow-specification-language/: DFSL_hw-parser.hpp  DFSL_parser.hpp  DFSL_syntax_tokens.hpp
cost-model/include/design-space-exploration/: DSE_config.hpp  DSE_csv_writer.hpp  DSE_design-options.hpp  DSE_design_point.hpp  DSE_hardware_modules.hpp  DSE_scaling-coefficients.hpp
cost-model/src/: BASE_base-objects.cpp
data/hw/: accelerator_2.m  accelerator_gamma.m
data/mapping/: vgg19_kcp_ws.m  vgg19_nlr.m  vgg19_rs.m  vgg19_xp_ws.m  vgg19_yxp_os.m
data/model/: vgg19_model.m
tools/frontend/: modelfile_to_mapping_custom.py
tools/jupyter_notebook/: vgg16_output_analysis.ipynb  vgg19_output_analysis.ipynb
vgg19_results/: vgg19_kcp_ws.csv
(+13 files in other folders)
